Add changes to HTML and CSS

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
       <span> <a href="#">LOCATIONS</a></span>
     </nav>
 
+<!-- Set every element necessary with a class name to be
+able to style it accordingly with the stylesheet--> 
 
-    <!--Content Section, this is a massive section with a header section and body section-->
+    <!--Content Section, this is a massive section with a
+    header section and body section-->
     <div class="content">
       <!-- Content Header -->
       <div class="header">
